# cross-contract

./: .gitignore  Cargo.toml  build.sh
res/: simple_bank.wasm  token_contract.wasm
scripts/: build.sh  test_net_tests.sh
simple-bank/: Cargo.toml
simple-bank/src/: lib.rs
tests/: utils.rs
token-contract/: Cargo.toml
token-contract/src/: lib.rs
