[package]
name = "cross-contract"
version = "0.0.2"
authors = ["jsawyer <jack@flux.xyz>"]
edition = "2018"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = [
  "simple-bank",
  "token-contract"
]

[dev-dependencies]
near-sdk = { git = "https://github.com/near/near-sdk-rs.git", rev="249dacdcd3fd34bc00f0895a275f33f05cd910c1" }
near-sdk-sim = { git = "https://github.com/near/near-sdk-rs.git", rev="249dacdcd3fd34bc00f0895a275f33f05cd910c1" }
simple-bank = { path = "./simple-bank" }
token-contract = { path = "./token-contract" }