[package]
name = "simple-bank"
version = "0.1.0"
authors = ["Near Inc <hello@near.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { git = "https://github.com/near/near-sdk-rs.git" }
near-contract-standards = { git = "https://github.com/near/near-sdk-rs.git" }
serde_json = "1.0.64"
serde = "1.0.64"