[package]
name = "token-contract"
version = "0.1.0"
authors = ["Near Inc <jack@flux.xyz>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { git = "https://github.com/near/near-sdk-rs.git" }
near-contract-standards = { git = "https://github.com/near/near-sdk-rs.git" }
serde = "1.0.64"
serde_json = "1.0.64"